--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Simple Interest Calculator</title>
     </head>
     <body>
+        <div id="maindiv">
         <h1>Simple Interest Calculator</h1>
-        <div class="center">
+        <!-- <div class="center"> -->
         <form id="calculator">
             <table>
             <tr>
@@ -14,25 +16,43 @@
             </tr>
             <tr>
                 <td><label id="rate">Interest Rate</label> </td>
-                <td><input type="number"  id="rate" name="rate"></td>
+                <td>
+                    <input type="range"  id="rate" name="rate"
+                        min="1" max="20" step="0.25" value="10.25"
+                    >
+                    <span>10.25 %</span>
+                </td>
             </tr>
             <tr>
                 <td><label id="years">No. of Years</label> </td>
-                <td><input type="number"  id="years" name="years"></td>
+                <td>
+                    <select type="number"  id="years" name="years">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </td>
             </tr>
             </table>
             <p>
                 <button onclick="compute()">Compute Interest</button>
+                <span id="result"></span>
             </p>
         </form>
-        <p>
+        <!-- <p>
             Interest : <span id="result"></span>
-        </p>
-        </div>
-        <p>
-            Everone Can Get Rich
-        </p>
-        
-        
+        </p> -->
+        <!-- </div> -->
+        <footer>
+            <p>&copy; Everone Can Get Rich</p>
+        </footer>
+    </div>
     </body>
 </html>
