--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simple Interest Calculator</title>
     </head>
     <body>
-        <div id="maindiv">
+        <div class="maindiv" id="maindiv">
         <h1>Simple Interest Calculator</h1>
         <!-- <div class="center"> -->
         <form id="calculator">
@@ -46,6 +46,7 @@
                 <span id="result"></span>
             </p>
         </form>
+        
         <!-- <p>
             Interest : <span id="result"></span>
         </p> -->
