--- a/index.html
+++ b/index.html
@@ -9,38 +9,31 @@
         <h1>Simple Interest Calculator</h1>
         
         <form id="calculator">
-            <table>
-            <tr>
-                <td><label id="principal">Amount</label> </td>
-                <td><input type="number"  id="principal" name="principal"></td>
-            </tr>
-            <tr>
-                <td><label id="rate">Interest Rate</label> </td>
-                <td>
-                    <input type="range"  id="rate" name="rate"
-                        min="1" max="20" step="0.25" value="10.25"
-                    >
-                    <span>10.25 %</span>
-                </td>
-            </tr>
-            <tr>
-                <td><label id="years">No. of Years</label> </td>
-                <td>
-                    <select type="number"  id="years" name="years">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
-                </td>
-            </tr>
-            </table>
+            
+            <label id="principal">Amount
+                <input type="number"  id="principal" name="principal">
+            </label><br/>
+            <label id="rate">Interest Rate
+                <input type="range"  id="rate" name="rate"
+                    min="1" max="20" step="0.25" value="10.25"
+                    onchange="ratechange()"
+                >
+                <span id="ratevalue">10.25 %</span>
+            </label><br/>
+            <label id="years">No. of Years
+                <select type="number"  id="years" name="years">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </label><br/>
             <p>
                 <button onclick="compute()">Compute Interest</button>
                 <span id="result"></span>
