--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <tr><td><label for="rate">Interest Rate</label></td>
             <td><input type="range"  id="rate" name="rate"
                     min="1" max="20" step="0.25" value="10.25"
-                    onchange="ratechange()"
+                    oninput="ratechange()"
                 >
                 <span id="ratevalue">10.25%</span>
             </td></tr>
